2007-06-27  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/cl.el: Use cl-loaddefs.el rather than manual autoloads.

	* emacs-lisp/cl-extra.el:
	* emacs-lisp/cl-seq.el:
	* emacs-lisp/cl-macs.el: Set generated-autoload-file to cl-loaddefs.el.
	Add autoload cookies on all defs autoloaded manually in cl.el.

	* emacs-lisp/cl-loaddefs.el: New file.

	* textmodes/texinfmt.el (texinfo-raisesections-alist)
	(texinfo-lowersections-alist): Merge definition and declaration.
	(texinfo-start-of-header, texinfo-end-of-header): Remove.
	(texinfo-format-syntax-table): Merge init into declaration.
	(texinfo-format-parse-line-args, texinfo-format-parse-args)
	(texinfo-format-parse-defun-args, texinfo-format-node)
	(texinfo-push-stack, texinfo-multitable-widths)
	(texinfo-define-info-enclosure, texinfo-alias)
	(texinfo-format-defindex, batch-texinfo-format): Use push.
	(texinfo-footnote-number): Remove duplicate declaration.

	* ps-print.el: Update with auto-generated autoloads.

	* ps-mule.el: Set generated-autoload-file to "ps-print.el".

2007-06-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/autoload.el (autoload-generated-file): Interpret names
	relative to current dir for file-local settings.
	(autoload-generate-file-autoloads): Add `outfile' arg.
	(update-directory-autoloads): Use it to directly call
	autoload-generate-file-autoloads instead of going through
	update-file-autoloads so we avoid redundant searches and so we can know
	the set of buffers changed so we can save them all.

	* emacs-lisp/autoload.el (autoload-find-destination): Return nil
	rather than throwing `up-to-date'.
	(autoload-generate-file-autoloads): Adjust correspondingly.
	(update-file-autoloads): Be careful to let-bind
	autoload-modified-buffers and adjust to new calling conventions.
	(autoload-modified-buffers): Make it a dynamically scoped var.
	(update-directory-autoloads): Use file-relative-name instead of
	autoload-trim-file-name.